# aiida-project

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: cd.yml  ci.yml  pre-commit.yml  test.yml  update_changelog.py  validate_release_tag.py
aiida_project/: __init__.py  config.py  shell.py
aiida_project/commands/: __init__.py  create.py  destroy.py  main.py
aiida_project/data/: shell_fields.yaml
aiida_project/engine/: __init__.py  base.py  conda.py  factory.py  virtualenv.py
aiida_project/project/: __init__.py  base.py  conda.py  core.py  venv.py  virtualenv.py
